[gd_scene load_steps=8 format=3 uid="uid://dno1tk46e88kd"]

[ext_resource type="Script" path="res://Scenes/CardUI/card_ui.gd" id="1_ahau4"]
[ext_resource type="Texture2D" uid="uid://bdfpqf1xtchvl" path="res://Assets/CardLayout/card_back_brown.png" id="2_c1c06"]
[ext_resource type="Texture2D" uid="uid://dgfgoqdkujrh1" path="res://Assets/CardImages/Erika.png" id="3_2tnxf"]
[ext_resource type="Texture2D" uid="uid://6dxit3fkpymb" path="res://Assets/CardLayout/card_red.png" id="4_177bu"]
[ext_resource type="Texture2D" uid="uid://dxibrsqcik0aw" path="res://Assets/CardLayout/card_background.png" id="5_5iuuh"]
[ext_resource type="Script" path="res://Scenes/CardUI/card_state_machine.gd" id="6_8fcyv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve8wg"]
size = Vector2(1431.11, 2011.11)

[node name="CardUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 43.0
offset_top = 539.0
offset_right = 2091.0
offset_bottom = 2587.0
scale = Vector2(0.07, 0.07)
script = ExtResource("1_ahau4")

[node name="CardImages" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardBackImage" type="TextureRect" parent="CardImages"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -1024.0
offset_right = 1024.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c1c06")

[node name="CardImage" type="TextureRect" parent="CardImages"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 542.0
offset_top = 143.0
offset_right = 720.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_2tnxf")

[node name="CardColor" type="TextureRect" parent="CardImages"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -1024.0
offset_right = 1024.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_177bu")

[node name="CardBackground" type="TextureRect" parent="CardImages"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -1024.0
offset_right = 1024.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_5iuuh")

[node name="CardTexts" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 429.0
offset_top = -334.0
offset_right = -377.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 0

[node name="Attack" type="RichTextLabel" parent="CardTexts"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -205.0
offset_right = 385.0
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 150
text = "0"
fit_content = true
scroll_active = false

[node name="Health" type="RichTextLabel" parent="CardTexts"]
modulate = Color(0, 0, 0, 1)
z_index = -1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -371.0
offset_top = -205.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 150
text = "0"
fit_content = true
scroll_active = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(320, 32)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(742.856, 1014.29)
shape = SubResource("RectangleShape2D_ve8wg")

[node name="StatesUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.5
offset_top = 199.5
offset_right = 671.5
offset_bottom = 656.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="StatesUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -628.5
offset_top = -257.0
offset_right = 628.5
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.385687, 0.385694, 0.422203, 1)

[node name="Label" type="Label" parent="StatesUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -364.5
offset_top = -409.0
offset_right = 364.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 300
text = "state"

[node name="CardStateMachine" type="Node" parent="."]
script = ExtResource("6_8fcyv")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
